<?xml version="1.0"?>
<package>
  <name>tensorflow_ros</name>
  <version>0.0.4</version>
  <description>The tensorflow_ros package</description>

  <maintainer email="saschroeder@techfak.uni-bielefeld.de">Sarah Schröder</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>object_tracking_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>image_recognition_util</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>object_tracking_msgs</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>image_recognition_util</run_depend>
  <run_depend>python-numpy</run_depend>

</package>
